--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Aula Git</title>
 </head>
 <body>
-    <h1>Jogos Eletronicos do IFRO - Ji-Paraná
+    <h1>Jogos Eletronicos do IFRO - Ji-Paraná</h1>
 </body>
 </html>
