--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Jogos Eletronicos do IFRO - Ji-Paraná</h1>
     <hr>
-    <h3>Vamos desenvolver</h3>
+    <h3>Vamos desenvolver nosso site!</h3>
 </body>
 </html>
