--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Aula Git</title>
 </head>
 <body>
-    <h1>Jogos Eletronicos do IFRO - Ji-Paraná</h1>
-    <hr>
-    <h3>Vamos desenvolver nosso site!</h3>
-    <p>Criando um parágrafo</p>
+    <header>
+        <h1>Jogos Eletronicos do IFRO - Ji-Paraná</h1>
+        <hr>
+        <h3>Vamos desenvolver nosso site!</h3>
+        <p>Criando um parágrafo</p>
+    </header>
+    
+
 
 </body>
 </html>
