--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <hr>
         <h3>Vamos desenvolver nosso site!</h3>
         <p>Criando um parágrafo</p>
+        <ul>
+            <li>Ferrari</li>
+        </ul>
     </header>
     
 
